[project]

name = "warpxio"
version = "0.1.1"
description = "A CLI-based AI text generation tool (Proprietary)"
authors = [{name = "Roni Bhakta", email = "ronibhakta1@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
dependencies = [
    "click>=8.2.1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["warpxio*"]
exclude = ["readmefiles*"]

[project.scripts]
warpxio = "warpxio.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"